monitor/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana

spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      enableServiceLinks: false
      nodeSelector:
        kubernetes.io/hostname: moto-a1-3

      volumes:
        - name: data
          hostPath:
            path: /srv/grafana/data
        - name: config
          configMap:
            name: grafana

      securityContext:
        fsGroup: 472
        runAsGroup: 472
        runAsNonRoot: true
        runAsUser: 472

      containers:
        - name: grafana
          image: grafana/grafana:11.6.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: data
            - mountPath: /etc/grafana/grafana.ini
              name: config
              subPath: grafana.ini
