monitor/grafana/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana

spec:
  entryPoints:
    - websecure
  tls:
    secretName: grafana-tls
  routes:
    - kind: Rule
      match: Host(`monitor.toki317.dev`)
      middlewares:
        - name: auth-toki317-dev-admin
          namespace: auth
      services:
        - namespace: monitor
          kind: Service
          name: grafana
          port: http
          scheme: http
          strategy: RoundRobin
          weight: 1

    - kind: Rule
      match: Host(`monitor.toki317.dev`) && HeaderRegexp(`Authorization`, `^Bearer .+$`)
      middlewares:
        - name: auth-toki317-dev-soft
          namespace: auth
      services:
        - namespace: monitor
          kind: Service
          name: grafana
          port: http
          scheme: http
          strategy: RoundRobin
          weight: 1
